refactor: substituir @Autowired por injeção de dependência via construtor